web-infras/parser/tests/fixtures/babel/es2015/modules/invalid-escape-import-from/output.txt
[SyntaxError]: keyword can not contain any esc flag. (1,10)
1|import X fro\u006d 'x'
 |        ^
